memperbaiki bug img

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <script src="https://kit.fontawesome.com/61f8d3e11d.js" crossorigin="anonymous"></script>
   <title>FyLum</title>
 </head>
+
 <body>
   <div class="wrapper">
     <header>
-      <img src="./assets/images/icons/fylum.png" alt="">
+      <img src="assets/images/icons/fylum.png" alt="">
       <nav>
         <a href="">Login</a>
         <a href="">Register</a>
@@ -23,7 +24,8 @@
     </header>
     <main>
       <div class="container">
-        <img src="assets/images/index.avif" class="position-absolute top-0 start-50 translate-middle" alt="">
+        <img src="assets/images/backgrounds/laptop.jpg" class="position-absolute top-0 start-50 translate-middle"
+          alt="">
         <div class="tittle">
           <h1>START YOUR JOURNEY HERE</h1>
           <div class="link">
@@ -35,23 +37,26 @@
           <div class="card">
             <img src="" alt="">
             <h2>Product Designer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet modi!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet
+              modi!</p>
           </div>
           <div class="card">
             <img src="" alt="">
             <h2>Graphic designer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet modi!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet
+              modi!</p>
           </div>
           <div class="card">
             <img src="" alt="">
             <h2>Photography</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet modi!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet
+              modi!</p>
           </div>
         </section>
       </div>
     </main>
     <footer>
-      
+
     </footer>
   </div>
   <script src="bootstrap/js/bootstrap.js"></script>
