--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
 <body>
   <div class="wrapper">
     <header>
-      <img src="assets/images/icons/fylum.png" alt="">
-      <nav>
-        <a href="">Login</a>
-        <a href="">Register</a>
+      <nav class="navbar position-absolute">
+        <div class="container-fluid bg-dark w-100 py-4">
+          <a class="navbar-brand" href="">
+            <img src="assets/images/icons/fylum.png" height="40px"  alt="">
+          </a>
+          <div class=" fs-4">
+            <a class="text-main-purple  text-decoration-none mx-3" href="">Login</a>
+            <a class="text-secondary-purple  text-decoration-none" href="">Register</a>
+          </div>
+        </div>
       </nav>
     </header>
     <main>
-      <div class="container">
-        <img src="assets/images/backgrounds/laptop.jpg" class="position-absolute top-0 start-50 translate-middle"
-          alt="">
+      <div class="container-fluid p-0">
+        <img src="assets/images/backgrounds/laptop.jpg" width="100%" alt="">
         <div class="tittle">
           <h1>START YOUR JOURNEY HERE</h1>
           <div class="link">
@@ -35,19 +40,19 @@
         </div>
         <section>
           <div class="card">
-            <img src="" alt="">
+            <img class="" src="" alt="">
             <h2>Product Designer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet
               modi!</p>
           </div>
           <div class="card">
-            <img src="" alt="">
+            <img class="" src="" alt="">
             <h2>Graphic designer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet
               modi!</p>
           </div>
-          <div class="card">
-            <img src="" alt="">
+          <div class="card object-fit-sm-contain border rounded">
+            <img class="" src="" alt="">
             <h2>Photography</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nihil culpa distinctio nostrum amet
               modi!</p>
